# opencvTest

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/guoxiaofei/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/guoxiaofei/opencvtest/: MainActivity.java
app/src/main/java/org/opencv/samples/tutorial1/: Tutorial1Activity.java
app/src/test/java/com/example/guoxiaofei/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
